--- a/index.html
+++ b/index.html
@@ -68,23 +68,23 @@
         <div class="modal-body"><!-- Corps du modal -->
           <form name="reserve" action="index.html" method="post" id="modalefields"> <!-- Formulaire du modal -->
             <div class="formData">
-              <label for="first">Prénom</label><br>
+              <label class="text-label" for="first">Prénom</label><br>
               <input class="text-control" type="text" id="first" name="first" minlength="2">
             </div>
             <div class="formData">
-              <label for="last">Nom</label><br>
+              <label class="text-label" for="last">Nom</label><br>
               <input class="text-control" type="text" id="last" name="last" onfocus="">
             </div>
             <div class="formData">
-              <label for="email">E-mail</label><br>
+              <label class="text-label" for="email">E-mail</label><br>
               <input class="text-control" type="email" id="email" name="email">
             </div>
             <div class="formData">
-              <label for="birthdate">Date de naissance</label><br>
+              <label class="text-label" for="birthdate">Date de naissance</label><br>
               <input class="text-control" type="date" id="birthdate" name="birthdate">
             </div>
             <div class="formData">
-              <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+              <label  class="text-label" for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
               <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
             </div>
             <div class="formData" id="formDataRadio">
