suppression required dans le html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="formData">
               <label class="text-label" for="last">Nom</label><br>
-              <input class="text-control" type="text" id="last" name="last" onfocus="">
+              <input class="text-control" type="text" id="last" name="last" >
             </div>
             <div class="formData">
               <label class="text-label" for="email">E-mail</label><br>
@@ -117,7 +117,7 @@
             </div>
             <div class="formData">
               <!-- Checkbox pour les conditions d'utilisation -->
-              <input class="checkbox-input" type="checkbox" id="checkbox1" checked required="required">
+              <input class="checkbox-input" type="checkbox" id="checkbox1" checked >
               <label class="checkbox2-label" for="checkbox1">
                 <span class="checkbox-icon"></span>
                 J'ai lu et accepté les conditions d'utilisation.
